ci/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quest-app
  labels:
    name: quest-app
    env: dev
