ci/k8s/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quest-app
  namespace: quest-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quest-app
  template:
    metadata:
      labels:
        app: quest-app
    spec:
      serviceAccountName: quest-app-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: quest-app
        image: 904233133644.dkr.ecr.ap-south-1.amazonaws.com/quest-dev-app:latest
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 3000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /readyz
        #     port: 3000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
