ci/k8s/dev/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: quest-app-service
  namespace: quest-app
spec:
  type: LoadBalancer
  selector:
    app: quest-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
