ci/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quest-app-service
  namespace: quest-app
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
  selector:
    app: quest-app
