ci/k8s/dev/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: quest-app-ingress
#   namespace: quest-app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - af565c8da89824c369d9a3b7ae0dc1fc-1048673516.ap-south-1.elb.amazonaws.com
#       secretName: quest-app-tls
#   rules:
#     - host: af565c8da89824c369d9a3b7ae0dc1fc-1048673516.ap-south-1.elb.amazonaws.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: quest-app-service
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: quest-app-ingress-public
  namespace: quest-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:iam::904233133644:server-certificate/QUEST-SSC"
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
spec:
  ingressClassName: alb
  tls:
  - secretName: quest-app-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quest-app-service
            port:
              number: 80
